syntax = "proto3";

option csharp_namespace = "IndepthProtobuf";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply); // Unary RPC
  rpc RequestManyHellos (stream HelloRequest) returns (HelloReply); // Client-streaming RPC
  rpc SayManyHellos (HelloRequest) returns (stream HelloReply); // Server-streaming RPC
  rpc RequestAndSayManyHellos (stream HelloRequest) returns (stream HelloReply); // Bi-directional streaming RPC
}

message HelloRequest {
  string name = 1; // Name of the client to say hello to
}

message HelloReply {
  string message = 1;
  BasicTypes basic_types_field = 2;
  BasicTypes.InternalEnum internal_enum_field = 3;
  ExternalEnum external_enum_field = 4;
  NestedMessage nested_message_field = 5;
  message NestedMessage {
    
  }
}

message BasicTypes {
  int32 int_field = 1;
  int64 long_field = 2;
  uint32 unsigned_int_field = 3;
  uint64 unsigned_long_field = 4;
  sint32 signed_int_field = 5;
  sint64 signed_long_field = 6;
  fixed32 fixed_int_field = 7;
  fixed64 fixed_long_field = 8;
  sfixed32 signed_fixed_int_field = 9;
  sfixed64 signed_fixed_long_field = 10;
  float float_field = 11;
  double double_field = 12;
  bool boolean_fild = 13;
  string string_field = 14;
  bytes bytes_field = 15;
  InternalEnum internal_enum_field = 16;
  ExternalEnum external_enum_field = 17;
  enum InternalEnum {
    NONE = 0;
    SINGLE = 1;
    MANY = 2;
  }
}

enum ExternalEnum {
  NONE = 0;
  SINGLE = 1;
  MANY = 2;
}